<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_basket"
        android:icon="@drawable/ic_shopping_cart_tinted"
        android:title="@string/go_to_basket"
        app:showAsAction="always" />

</menu>