<resources>
    <string name="app_name">Xebia_Henri_Potier</string>
    <string name="image_book_thumbnail">image_book_thumbnail</string>
    <string name="refresh_catalogue">Nothing in catalogue. Please refresh</string>
    <string name="book_cover">book_cover</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="go_to_basket">Go to cart</string>
    <string name="catalogue">Catalogue</string>
    <string name="basket">Basket</string>
    <string name="remove_from_basket">Remove from basket</string>
    <string name="edit_quantity">Edit quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="message_not_connected">Your device is currently not connected to any network. Please connect to the internet before moving forward</string>
    <string name="basket_empty">Basket is empty !</string>
    <string name="see_book">See book</string>
    <string name="default_promotion">Promotion: 0.0 €</string>
    <string name="default_total">New Total: %s €</string>
</resources>
